test/corpus/fail/M0095.mo
=========
M0095.mo
=========

(func () : () {}) : () -> Bool


---

(source_file
  (exp_dec
    (annot_exp_object
      (par_exp
        (func_exp
          (tup_pat)
          (typ_annot
            (tup_typ))
          (func_body
            (block_exp))))
      (func_typ
        (tup_typ)
        (path_typ
          (typ_path
            (type_identifier)))))))
